syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "options.proto";
import "validation.proto";


message VerbaCheck {
    string color = 1 [(verba_check) = "auto/color-stock"];
    string name = 2 [(verba_check) = "auto/name"];

    int64 number = 3 [(verba_check) = "auto/number"];

    string value = 4;
}

message VerbaCheckWithNested {
    double power = 1 [(verba_check) = "auto/power"];
    VerbaCheck check = 2;
}

message VerbaWithPlaceHolder {
    string color = 1 [(verba_check) = "auto/color-stock"];
    string name = 2 [(verba_check) = "auto/${COLOR}"];
}

message VerbaWithPlaceHolderWithNested {
    string color = 1 [(verba_check) = "auto/color-stock"];
    string name = 2 [(verba_check) = "auto/${COLOR}"];

    string value = 3 [(verba_check) = "auto/${COLOR}/${name}"];

    VerbaWithPlaceHolder msg = 4;

}

message VerbaWithInvalidPlaceholder {
    VerbaWithPlaceHolder placeholder = 1;
    string name = 3 [(verba_check) = "${placeholder}"];
}

message VerbaMessageWithOptionalField {
    string name = 1 [(verba_check) = "/auto/color", (is_optional) = true];
}
